Added necessary title and paragraph text to index.html file to complete the project.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Webpage</title>
+    <title>CH 1 Apply Your Knowledge</title>
 </head>
 <body>
-    <p>Welcome to My First Webpage</p>
-    
+    <p><em>*Disclaimer: I'm not entirely sure which project was supposed to be submitted as there are multiple prompts, so I combined the two that I saw*</em></p>
+    <h2>Chapter 1: Apply Your Knowledge</h2>
+   
+    <p><em>Noelani Clark , 09/14/2025<br>Using VS Code</em></p>
+    <hr>
+
+
+    <p>Planning a website starts with knowing its purpose which can be to inform, promote, or provide a service. Next we think about the users and what they need from the site. It’s also important to consider the devices and browsers they’ll use so the site works smoothly everywhere. Finally, sketching a wireframe and creating a site map to organize the layout and page flow before building.</p>
+   
+    <p>In Chapter 1, I learned how the Internet and the web work, the role of HTML in creating webpages, and the steps for building a basic webpage. I also learned about planning a site with purpose, audience, and layout in mind, and explored different tools for writing and editing HTML.</p>
+    <hr>
+
+    <h2>Chapter 1: Extend Your Knowledge</h2>
+    <p>Guideline 1.1: Provide alt text for non-text content such as images, charts, or audio so that users with visual impairments or assistive technologies can still understand the information.</p>
+
+    <p>Guideline 1.2: Make sure audio and video content is accessible by including captions, transcripts, or audio descriptions. This makes sure people who are deaf, hard of hearing, or blind can still access the information.</p>
+
+    <p>Guideline 1.3: Create content that can be presented in different ways without losing meaning. This means using proper structure, headings, and semantic HTML instead of relying only on visual styling.</p>
+
+    <p>Guideline 1.4: Make content easy to see and hear by using clear contrast between text and background, avoiding color as the only way to convey meaning, and allowing users to control audio or zoom without losing content.</p>
+
+
 </body>
 </html>
