Accidentally commented incorrectly, so redoing commit message.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CH 1 Apply Your Knowledge</title>
 </head>
-// per course instructions, please note that I have previous experience with HTML and CSS through self-teaching and other courses, thus why I've added some additional elements for preference
+<!---- per course instructions, please note that I have previous experience with HTML and CSS through self-teaching and other courses, thus why I've added some additional elements for preference --->
 <body>
     <p><em>*Disclaimer: I'm not entirely sure which project was supposed to be submitted as there are multiple prompts, so I combined the two that I saw*</em></p>
     <h2>Chapter 1: Apply Your Knowledge</h2>
